--- a/table.html
+++ b/table.html
@@ -105,7 +105,7 @@
     <table border="1" width="850px" align="center" style="background-color: rgb(231, 238, 210); border-spacing: 0px;">
         <th colspan="3"><h2>For peaceful mind listen to this.... 🎵🎶</h2></th>
     
-        <tr class="audio" >
+        <tr class="audio" style="height: 100px;">
             <td><audio controls autoplay muted > <source src="[iSongs.info] 03 - Friendship.mp3"></audio></td>
             <td><audio controls autoplay muted > <source src="[iSongs.info] 01 - Oh Sita Hey Rama.mp3"></audio></td>
             <td><audio controls autoplay muted > <source src="[iSongs.info] 01 - Ee Raathale.mp3"></audio></td>
@@ -117,7 +117,7 @@
             <td><video controls autoplay muted width="280px" height="350px"><source src="159627 (1080p).mp4"></video></td>
         </tr>
         <th colspan="3"><h2>For reference visit the the below websites...</h2></th>
-            <tr class="websites" style="background-color: rgb(219, 161, 248);">
+            <tr class="websites" style="background-color: rgb(151, 214, 163); height: 50px;">
                 <td><a href="https://www.w3schools.com/">W3 schools</a></td>
                 <td><a href="https://www.tutorialrepublic.com/">Tutorials Republic</a></td>
                 <td><a href="https://en.wikipedia.org/wiki/HTML">Stack Overflow</a></td>
@@ -130,7 +130,7 @@
         </tr>
         
     </table><br>
-    <marquee behavior="scroll" direction="left" style="color: rgb(66, 31, 223); background-color: rgb(144, 159, 169);"><h2>Be a Awesome Web Developer...</h2></marquee>
-    <br>
+    <marquee behavior="scroll" direction="left" style="color: rgb(66, 31, 223); background-color: rgb(227, 247, 129);"><h2>Be a Awesome Web Developer...</h2></marquee>
+   
 </body>
 </html>
